# toobins

./: .gitignore  .prettierrc  README.md  REVIEW.todo  TODO.todo  address.json  hardhat.config.ts  package.json  pnpm-lock.yaml
contracts/: ExploitGas.sol  ExploitYoink.sol  MockMoonbirds.sol  Toobins.sol  ToobinsExploitYoink.sol
mockend/: Cargo.toml  rustfmt.toml
mockend/src/: main.rs
scripts/: hat.ts
scripts/lib/: address.ts  bytes.ts  deploy.ts  ens.ts  etherscan.ts  frontend.ts  gas.ts  index.ts  launch.ts  log.ts  prompts.ts  seed.ts  transaction.ts  verify.ts
scripts/run/: deploy.ts  verify.ts
scripts/run/use/: args.ts
test/: 1-Toobins.ts  2-ExploitYoink.ts  Toobins.ts
typechain/: hardhat.d.ts  index.ts
typechain/@divergencetech/: index.ts
typechain/contracts/: ExploitGas.ts  ExploitYoink.ts  Exploiter.ts  IDelegationRegistry.ts  MockMoonbirds.ts  Toobins.ts  index.ts
typechain/contracts/ExploitGas.sol/: ExploitGas.ts  Exploiter.ts  index.ts
typechain/contracts/ToobinsExploitYoink.sol/: Toobins.ts  ToobinsWithExploitableYoink.ts  index.ts
typechain/factories/@divergencetech/: index.ts
typechain/factories/contracts/: ExploitGas__factory.ts  ExploitYoink__factory.ts  Exploiter__factory.ts  IDelegationRegistry__factory.ts  MockMoonbirds__factory.ts  Toobins__factory.ts  index.ts
typechain/factories/contracts/ExploitGas.sol/: ExploitGas__factory.ts  Exploiter__factory.ts  index.ts
typechain/factories/contracts/ToobinsExploitYoink.sol/: ToobinsWithExploitableYoink__factory.ts  Toobins__factory.ts  index.ts
(+4 files in other folders)
