[package]
name = "mock-toobins"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
shuttle-rocket = "0.18.0"
tokio = "1.28.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
